--- a/views/search.ejs
+++ b/views/search.ejs
@@ -41,11 +41,11 @@
       padding: 20px;
       }
       form {
-      width: 100%;
       padding: 20px;
       border-radius: 6px;
       background: #fff;
       box-shadow: 0 0 8px  #cc7a00; 
+     
       }
       .banner {
       position: relative;
@@ -189,7 +189,20 @@
       display:block;
       padding-bottom:5px;
       }
+    }
+      
+      select#inlineFormCustomSelect {
+      
+        width: 60px;
+        margin-left: 17px;
       }
+      input#name {
+        width: 120px;
+    }
+    input#protine{
+        width: 190px;
+    }
+      
     </style>
 </head>
 <body>
@@ -219,16 +232,70 @@
     </div>
     <div class="container p-5">
         <div class="container pb-3 border border-dark">
-            <div class="row mt-3">
-                <div class=" col-sm-4 container pb-2">
+            <div class="mt-3">
+                <div class="pb-2">
                     <div>
                         <form method="post" action="/api/protein/getsearchvalue" >
-                            <h4>Protein Name</h4>
-                            <div class="item">
-                                <input id="name" type="text" name="proteinname" required/>
+                            <div class="form-group row">
+                                <label class="col-md-2 col-form-label">Protein Name:</label>
+                                <input id="protine" type="text" class="col-md-4 form-control" name="proteinname" required/>
+                                
+                            </div>
+                            <hr>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Combined score</label>
+                                <label class="col-xs-3 mr-3 col-form-label">>=</label>
+                                <input type="text" class="form-control" id="name" name="combinedscoreminval"  value="0">
+                                <label class="col-xs-3 mr-3 ml-3 col-form-label">and</label>
+                                <label class="col-xs-3 mr-3 col-form-label"><=</label>
+                                <input type="text" class="form-control" id="name" name="combinedscoremaxval"  value="10000">
+                            </div>
+                            <hr>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Database</label>
+                                <label class="col-xs-3 mr-3 col-form-label">>=</label>
+                                <input type="text" class="form-control" id="name" name="databaseminval"  value="0">
+                                <label class="col-xs-3 mr-3 ml-3 col-form-label">and</label>
+                                <label class="col-xs-3 mr-3 col-form-label"><=</label>
+                                <input type="text" class="form-control" id="name" name="databasemaxval"  value="10000">
+                            </div>
+                            <hr>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Experimental</label>
+                                <label class="col-xs-3 mr-3 col-form-label">>=</label>
+                                <input type="text" class="form-control" id="name" name="experimentalminval"  value="0">
+                                <label class="col-xs-3 mr-3 ml-3 col-form-label">and</label>
+                                <label class="col-xs-3 mr-3 col-form-label"><=</label>
+                                <input type="text" class="form-control" id="name" name="experimentalmaxval"  value="10000">
+                            </div> 
+                            <hr>    
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Textmining</label>
+                                <label class="col-xs-3 mr-3 col-form-label">>=</label>
+                                <input type="text" class="form-control" id="name" name="textminingminval"  value="0">
+                                <label class="col-xs-3 mr-3 ml-3 col-form-label">and</label>
+                                <label class="col-xs-3 mr-3 col-form-label"><=</label>
+                                <input type="text" class="form-control" id="name" name="textminingmaxval"  value="10000">
+                            </div>
+                            <hr>    
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Co-expression</label>
+                                <label class="col-xs-3 mr-3 col-form-label">>=</label>
+                                <input type="text" class="form-control" id="name" name="coexpressionminval"  value="0">
+                                <label class="col-xs-3 mr-3 ml-3 col-form-label">and</label>
+                                <label class="col-xs-3 mr-3 col-form-label"><=</label>
+                                <input type="text" class="form-control" id="name" name="coexpressionmaxval"  value="10000">
+                            </div>     
+                            <hr> 
+                            <div>
+                                <select name="relationalvalue">
+									<option value="1">View First related Protein</option>
+									<option value="2">View Second related Protein</option>
+									<option value="3">View Third related Protein</option>
+								</select>
                             </div>
                             <div class="btn-block">
-                                <button type="submit" href="/">Search</button>
+                                <button type="submit" href="/">search</button>
                             </div>
                         </form>
                     </div>
